# Discrete-Mathematics

./: .gitignore
NimGame/: README.md
NimGame/nim-game/: nimgame_interminal.py
NimGame/src/: main.py  nimgame.py
ProblemSet1/: Report.aux  Report.fdb_latexmk  Report.fls  Report.out  Report.tex  input_format  input_format2  maxcut.py
ProblemSet3/: README.md  pyproject.toml
ProblemSet3/src/problemset3/: __init__.py  logicformulaevaluator.py  myset.py
ProblemSet3/tests/: test_logicformulaevaluator.py  test_myset.py
ProblemSet4/: pyproject.toml
ProblemSet4/src/: ackermannFunction.py  stirlingFormula.py
ProblemSet4/src/problemset4/: __init__.py
