[project]
name = "problemset4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hania", email = "hana_mm@op.pl" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.3",
]

[project.scripts]
problemset4 = "problemset4:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
